Fix oversized pages on mobile browsers due to adress bar

--- a/src/app.scss
+++ b/src/app.scss
@@ -55,7 +55,7 @@
 }
 
 .app {
-  height: 100vh;
+  height: 100%;
   scrollbar-width: none;
 
   .linksToPrivacy {
