--- a/src/global.scss
+++ b/src/global.scss
@@ -1,3 +1,9 @@
+#root {
+  width: 100vw;
+  height: 100%;
+  position: fixed;
+}
+
 :root {
   --text-color-top: #438a83;
   --text-color-bottom: #2b5359;
