--- a/src/pages/international/international.scss
+++ b/src/pages/international/international.scss
@@ -1,9 +1,10 @@
 @import "../../global.scss";
 
 .internationalContainer {
-  height: 100vh;
+  height: 100%;
   background: linear-gradient(var(--background-color-dark), var(--background-color-light));
-  scroll-snap-align: end;
+  scroll-snap-align: start;
+  margin-top: 50px;
 
   display: flex;
   flex-direction: column;
