--- a/src/pages/intro/intro.scss
+++ b/src/pages/intro/intro.scss
@@ -1,7 +1,7 @@
 @import "../../global.scss";
 
 .intro {
-  height: calc(100vh + 50px);
+  height: calc(100% - var(--height-transition-triangle) * 0.5);
   background-color: var(--background-color-light);
   scroll-snap-align: start;
 
@@ -9,7 +9,7 @@
 
   .contentContainer {
     width: 100%;
-    height: calc(100vh - 50px);
+    height: 100%;
     background: linear-gradient(var(--background-color-light), var(--background-color-dark));
 
     display: flex;
@@ -18,7 +18,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: space-between;
-      overflow: visible;
+      overflow: hidden;
     }
 
     .leftContainer {
@@ -148,13 +148,13 @@
     &:after {
       content: "";
       width: 100%;
-      height: 100px;
+      height: var(--height-transition-triangle);
       position: absolute;
       left: 0;
-      bottom: -50px;
-      background-color: var(--background-color-dark);
-      -webkit-clip-path: polygon(0% 0%, 100% 0%, 50% 100%);
-      clip-path: polygon(0% 0%, 100% 0%, 50% 100%);
+      bottom: calc(-1 * var(--height-transition-triangle) * 0.5);
+      background-color: var(--background-color-light);
+      -webkit-clip-path: polygon(0 0, 50% 100%, 100% 0, 100% 100%, 0 100%);
+      clip-path: polygon(0 0, 50% 100%, 100% 0, 100% 100%, 0 100%);
       z-index: 99;
     }
   }
