--- a/src/pages/poseGraphPrediction/poseGraphPrediction.scss
+++ b/src/pages/poseGraphPrediction/poseGraphPrediction.scss
@@ -1,7 +1,7 @@
 @import "../../global.scss";
 
 .poseGraphPredictionContainer {
-  height: calc(100vh - 50px);
+  height: calc(100% / var(--number-of-projects) - var(--height-transition-triangle) * 0.5);
   background: linear-gradient(var(--background-color-dark), var(--background-color-light));
   scroll-snap-align: start;
   position: relative;
