--- a/src/pages/rvizCinematographer/rvizCinematographer.scss
+++ b/src/pages/rvizCinematographer/rvizCinematographer.scss
@@ -1,9 +1,9 @@
 @import "../../global.scss";
 
 .cinematographerContainer {
-  height: 100vh;
+  height: calc(100% / var(--number-of-projects));
   background: linear-gradient(var(--background-color-light), var(--background-color-dark));
-  scroll-snap-align: end;
+  scroll-snap-align: start;
 
   display: flex;
 
